--- a/esmedellin-app/.env
+++ b/esmedellin-app/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://admin:admin123@localhost:27017/esmedellin?authSource=admin
+MONGODB_URI=mongodb://ricardo:johana30@localhost:27017/esmedellin?authSource=admin
 JWT_SECRET=tu_secreto
 PORT=4000
